Fri Oct 14 00:22:19 1994  Theodore Y. Ts'o  (tytso@dcl)

	* t_mddriver.c (MDString, MDTestSuite): Cast char pointer to the
		expected unsigned char pointer, since that's what MDUpdate
		requires. 

Thu Oct 13 17:50:19 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Add support for the MDx test driver t_mddriver.
		Run t_mddriver on a "make check", to make sure we have a
		valid MD5 implementation.

	* md5.c (UL): Add the UL macro to control how unsigned long
		constants are compiled.  If we have an ANSI C environment,
		use the UL suffix to keep the compiler from warning about
		numbers that would overflow a signed long.

Tue Oct  4 14:55:10 1994  Theodore Y. Ts'o  (tytso@dcl)

	* md5crypto.c:
	* md5glue.c: Added placeholder for magic number.

