@@ -1,3 +1,9 @@
+Wed Jan 25 20:11:30 1995  John Gilmore  (gnu at toad.com)
+
+	* Makefile.in (CFLAGS):  Use -I../des to pull in include file.
+	* md5.c, md5crypto.c, md5glue.c, t_mddriver.c:  Replace <.../...>
+	includes with "..."s.
+
 Fri Oct 14 00:22:19 1994  Theodore Y. Ts'o  (tytso@dcl)
 
 	* t_mddriver.c (MDString, MDTestSuite): Cast char pointer to the
